# js-dormant

./: CLAUDE.md  activation_patching.py  analyze_router_bias.py  cpu_dev.py  dormant.py  gpu_dev.py  investigate_backdoor.py  logit_lens.py  main.py  pairwise_diff.py  probe_activations_m1.py  probe_ai_identity.py  probe_constants.py  probe_identity.py  probe_model1.py  probe_model1_r2.py  probe_routing_m1.py  probe_warmup_continue.py  pyproject.toml  run_warmup.py  svd_attention_vs_base.py  svd_probe.py  test_trigger.py  trigger_scan_ds.py  verify_pi.py  vocab_scan.py  weight_diff.py  weight_diff_ds.py
