[project]
name = "js-dormant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jsinfer>=0.2.1",
    "jupyter>=1.1.1",
    "modal>=0.73",
    "numpy>=2.4.2",
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate>=1.0",
    "huggingface_hub>=0.20",
    "safetensors>=0.4",
]
